# gtrends_collection

./: .gitignore  LICENSE.txt  README.md  data_state.json  mkdocs.yml  pyproject.toml  status.json
.github/workflows/: weekly_collection.yaml  yearly_collection.yaml
data/term=%2Fg%2F11hy9m64ws/: part-0.parquet
data/term=%2Fg%2F11j30ybfx6/: part-0.parquet
data/term=%2Fg%2F11q4gh4b8f/: part-0.parquet
data/term=%2Fm%2F0b7k33/: part-0.parquet
data/term=9mm/: part-0.parquet
data/term=Naloxone/: part-0.parquet
data/term=bronchiolitis/: part-0.parquet
data/term=drug+overdose/: part-0.parquet
data/term=heat+exhaustion/: part-0.parquet
data/term=heat+stroke/: part-0.parquet
data/term=influenza/: part-0.parquet
data/term=narcan/: part-0.parquet
data/term=nirsevimab/: part-0.parquet
data/term=overdose/: part-0.parquet
data/term=rsv/: part-0.parquet
data/term=shotgun/: part-0.parquet
data_yearly/term=%2Fg%2F11hy9m64ws/: part-0.parquet
data_yearly/term=%2Fg%2F11j30ybfx6/: part-0.parquet
data_yearly/term=%2Fg%2F11q4gh4b8f/: part-0.parquet
data_yearly/term=%2Fm%2F0b7k33/: part-0.parquet
data_yearly/term=%2Fm%2F0cycc/: part-0.parquet
data_yearly/term=9mm/: part-0.parquet
data_yearly/term=Naloxone/: part-0.parquet
data_yearly/term=bronchiolitis/: part-0.parquet
data_yearly/term=drug+overdose/: part-0.parquet
data_yearly/term=heat+exhaustion/: part-0.parquet
data_yearly/term=heat+stroke/: part-0.parquet
data_yearly/term=influenza/: part-0.parquet
data_yearly/term=narcan/: part-0.parquet
data_yearly/term=nirsevimab/: part-0.parquet
data_yearly/term=overdose/: part-0.parquet
data_yearly/term=rsv/: part-0.parquet
data_yearly/term=shotgun/: part-0.parquet
docs/: 404.html  index.html  objects.inv  sitemap.xml
docs/Collector/: index.html
docs/Data/: index.html
docs/Data_Yearly/: index.html
docs/Framework/: index.html
docs/coverage/: class_index.html  function_index.html  index.html  status.json  z_2bd49bb5bb692371___about___py.html  z_2bd49bb5bb692371___init___py.html  z_2bd49bb5bb692371_collector_py.html  z_2bd49bb5bb692371_dataset_py.html  z_2bd49bb5bb692371_utils_py.html  z_4776ad78a17b0e1c___init___py.html  z_4776ad78a17b0e1c_collector_py.html  z_4776ad78a17b0e1c_dataset_py.html  z_4776ad78a17b0e1c_utils_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_collector_test_py.html  z_a44f0ac069e85531_dataset_test_py.html  z_a44f0ac069e85531_utils_test_py.html
docs/functions/Collector/: index.html
docs/functions/dataset/: index.html
docs/functions/utils/: index.html
docs/search/: search_index.json
docs_source/: Data.md  Data_Yearly.md  Framework.md  README.md
docs_source/coverage/: class_index.html  function_index.html  index.html  status.json  z_2bd49bb5bb692371___about___py.html  z_2bd49bb5bb692371_dataset_py.html  z_2bd49bb5bb692371_utils_py.html  z_4776ad78a17b0e1c___init___py.html  z_4776ad78a17b0e1c_collector_py.html  z_4776ad78a17b0e1c_dataset_py.html  z_4776ad78a17b0e1c_utils_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_collector_test_py.html  z_a44f0ac069e85531_dataset_test_py.html  z_a44f0ac069e85531_utils_test_py.html
docs_source/functions/: Collector.md  dataset.md  utils.md
scope/: locations.txt  term_map.csv  terms.txt
scripts/: add_terms.py  build_metadata.py  build_summary.py  build_summary_yearly.py  historical_collection.py  weekly_collection.py  yearly_collection.py
src/gtrends_collection/: __init__.py  collector.py  dataset.py  utils.py
summaries/: means.csv  means_yearly.csv  observations.csv  observations_yearly.csv
tests/: collector_test.py  dataset_test.py  utils_test.py
