[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gtrends_collection"
dynamic = ["version"]
description = "Google Trends data collection framework."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Micah", email = "micah.iserman@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "google-api-python-client",
  "pandas",
  "pyarrow"
]

[project.optional-dependencies]
dev = [
  "mkdocs>=1.4.3",
  "mkdocstrings[python]>=0.18",
  "mkdocs-material>=9.1.15",
]

[project.urls]
Documentation = "https://dissc-yale.github.io/gtrends_collection"
Issues = "https://github.com/dissc-yale/gtrends_collection/issues"
Source = "https://github.com/dissc-yale/gtrends_collection"

[tool.hatch.version]
path = "src/gtrends_collection/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
test = [
  "coverage run -m pytest {args:tests}",
  " - coverage combine",
  "coverage html -d docs_source/coverage",
]

[tool.hatch.build.targets.sdist]
exclude = [
  "/.venv",
  "/.vscode",
  "/docs",
  "/docs_source",
  "/.env",
  "/.gitignore",
  "/mkdocs.yml",
]

[tool.hatch.envs.docs]
dependencies = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "tabulate"
]
[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean --strict"
serve = "mkdocs serve --dev-addr localhost:8000 --clean"

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12", "3.13"]

[[tool.hatch.envs.lint.matrix]]
python = ["3.13"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "pyarrow-stubs",
  "pytest",
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/gtrends_collection tests}"
style = [
  "ruff check {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff check --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 120

[tool.ruff]
target-version = "py38"
line-length = 120
lint.select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
lint.ignore = [
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Allow base import names
  "ICN001",
  # Allow defaults
  "B008", "FBT001", "FBT002",
  # Allow constants
  "PLR2004",
  # Allow print
  "T201",
  # Allow loop overwrite
  "PLW2901",
  # Allow quoted types for Queue
  "UP037",
  # Allow explicit string concationation
  "ISC003",
  # ignore casing
  "N802", "N803"
]
lint.unfixable = [
  # Don't touch unused imports
  "F401",
]
exclude = ["src/gtrends_collection/__init__.py"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["gtrends_collection", "tests"]
branch = true
parallel = true
omit = [
  "src/gtrends_collection/__about__.py",
]

[tool.coverage.paths]
gtrends_collection = ["src/gtrends_collection", "*/gtrends_collection/src/gtrends_collection"]
tests = ["tests", "*/gtrends_collection/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
